--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,6 @@ Flask==3.0.2
 imageio==2.33.0
 matplotlib==3.8.2
 numpy==1.26.4
-Pillow==10.0.1
 Pillow==10.2.0
 scikit_learn==1.3.1
+gunicorn==21.2.0
